--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,18 +14,18 @@ selenium = "^4.19.0"
 click = "^8.1.7"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^7.1.3"
-pytest-cov = "^4.0.0"
-pytest-mock = "^3.9.0"
-flake8 = "^5.0.4"
-black = "^22.8.0"
-coverage = {version = "^6.5.0", extras = ["toml"]}
-flake8-black = "^0.3.3"
-flake8-isort = "^4.2.0"
-flake8-bugbear = "^22.9.23"
-flake8-simplify = "^0.19.3"
-flake8-docstrings = "^1.6.0"
-mypy = "^0.981"
+pytest = ">=7.1.3"
+pytest-cov = ">=4.0.0"
+pytest-mock = ">=3.9.0"
+flake8 = ">=5.0.4"
+black = ">=22.8.0"
+coverage = {version = ">=6.5.0", extras = ["toml"]}
+flake8-black = ">=0.3.3"
+flake8-isort = ">=4.2.0"
+flake8-bugbear = ">=22.9.23"
+flake8-simplify = ">=0.19.3"
+flake8-docstrings = ">=1.6.0"
+mypy = ">=0.981"
 
 [tool.coverage.run]
 branch = true
